--- a/app/src/main/res/layout/fragment_grid.xml
+++ b/app/src/main/res/layout/fragment_grid.xml
@@ -1,12 +1,6 @@
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/gridview"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:columnWidth="90dp"
-          android:gravity="center"
-          android:horizontalSpacing="10dp"
-          android:numColumns="auto_fit"
-          android:orientation="vertical"
-          android:stretchMode="columnWidth"
-          android:verticalSpacing="10dp"
-/>
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recyclerView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
