--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Preview (grid item) dimensions -->
+    <dimen name="preview_size">120dp</dimen>
+    <dimen name="preview_padding">8dp</dimen>
+
+    <!-- Details dimensions -->
+    <dimen name="details_image_size">240dp</dimen>
+    <dimen name="details_top_spacing">48dp</dimen>
 </resources>
