Changed to API 23 to quick fix wrapping on grid.

--- a/app/src/main/res/layout/fragment_image_detail.xml
+++ b/app/src/main/res/layout/fragment_image_detail.xml
@@ -1,16 +1,16 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:id="@+id/pictureHolder"
-             tools:context="com.android.lofm.imagesdemo.fragment.ImageDetailFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center_horizontal">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="@dimen/details_image_size"
+        android:layout_height="@dimen/details_image_size"
+        android:layout_margin="@dimen/details_top_spacing"
         android:scaleType="centerCrop"
         android:transitionName="expandImage"
         android:id="@+id/imageViewDetail"/>
 
-</FrameLayout>
+</LinearLayout>
